--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "gemmi==0.6.5",
     "scikit-learn==1.6.1",
     "chembl_structure_pipeline==1.2.2",
+    "transformers>=4.43,<4.52",
+    "PyTDC>=1.1.15",
 ]
 
 [project.scripts]
