--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "numpy>=1.26,<2.0",
     "hydra-core==1.3.2",
     "pytorch-lightning==2.5.0",
-    "rdkit>=2024.3.2",
+    "rdkit>=2023.9.5,<2024.3.1",
     "dm-tree==0.1.8",
     "requests==2.32.3",
     "pandas>=2.2.2",
@@ -32,6 +32,8 @@ dependencies = [
     "gemmi==0.6.5",
     "scikit-learn==1.6.1",
     "chembl_structure_pipeline==1.2.2",
+    "transformers>=4.43,<4.52",
+    "PyTDC>=1.1.15",
 ]
 
 [project.scripts]
