--- a/scripts/train/configs/full.yaml
+++ b/scripts/train/configs/full.yaml
@@ -49,7 +49,7 @@ data:
   featurizer:
     _target_: boltz.data.feature.featurizer.BoltzFeaturizer
 
-  symmetries: PATH_TO_SYMMETRY_FILE
+  symmetries: null
   max_tokens: 512
   max_atoms: 4608
   max_seqs: 2048
